--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,19 +1,19 @@
 <div class="row">
   <div class="col-md-4"></div>
   <div class="col-md-4">
-    <%= form_with model: @post do |form| %>
+    <%= form_with model: @form do |form| %>
       <div class="mt-2">
         <%= form.label :title, class: "required" %>
         <%= form.text_field :title, class: "form-control", placeholder: "Enter Title" %>
-        <% if @post.errors[:title].any? %>
-          <div class="text-danger"><%= @post.errors[:title][0] %></div>
+        <% if @form.errors[:title].any? %>
+          <div class="text-danger"><%= @form.errors[:title][0] %></div>
         <% end %>
       </div>
       <div class="mt-2">
         <%= form.label :body, class: "required" %>
         <%= form.text_area :body, class: "form-control", placeholder: "Enter body" %>
-        <% if @post.errors[:body].any? %>
-          <div class="text-danger"><%= @post.errors[:body][0] %></div>
+        <% if @form.errors[:body].any? %>
+          <div class="text-danger"><%= @form.errors[:body][0] %></div>
         <% end %>
       </div>
       <div class="text-center py-3">
