--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,20 +1,20 @@
 <div class="w-50 mx-auto mt-5">
-    <h2 class="text-center"><%= @post.title %>'s Detail</h2>
+    <h2 class="text-center"><%= @model.title %>'s Detail</h2>
   <div class="detail">
     <div class="form-group row">
       <label class="col-md-4 col-form-label">ID</label>
-      <input type="text" value="<%= @post.id %>" class="form-control col-md-8" readonly>
+      <input type="text" value="<%= @model.id %>" class="form-control col-md-8" readonly>
     </div>
     <div class="form-group row">
       <label class="col-md-4 col-form-label">Title</label>
-      <input type="text" value="<%= @post.title %>" class="form-control col-md-8" readonly>
+      <input type="text" value="<%= @model.title %>" class="form-control col-md-8" readonly>
     </div>
     <div class="form-group row">
       <label class="col-md-4 col-form-label">Description</label>
-      <input type="text" value="<%= @post.body %>" class="form-control col-md-8" readonly>
+      <input type="text" value="<%= @model.body %>" class="form-control col-md-8" readonly>
     </div>
     <div class="form-group text-center">
-        <%= link_to "Edit Post", edit_post_path(@post), class: "btn btn-success mx-2" %>
+        <%= link_to "Edit Post", edit_post_path(@model), class: "btn btn-success mx-2" %>
         <%= link_to "Delete", post_path,
             method: :delete,
             data: { confirm: "Are you sure to delete?" }, class: "btn btn-danger mx-2" %>
