--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -7,7 +7,7 @@
     .col-md-4
       = link_to "Add New Post", new_post_path, class: "btn btn-primary" 
     .col-md-4
-      = link_to "Generate New Post", "create_random" , class: "btn btn-success" 
+      = link_to "Generate Random Post", "create_random" , class: "btn btn-success" 
   table.table.table-bordered
     thread.thread-dark
       tr.text-center
