--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -10,3 +10,52 @@
   bottom: 0;
   width: 100%;
 }
+
+.required:after {
+  content: "*";
+  color: red;
+  margin-left: 3px;
+}
+
+a {
+  text-decoration: none !important;
+}
+
+.paginate_button {
+  padding: 4px 12px !important;
+}
+
+.dataTables_wrapper .dataTables_paginate{
+  float: none;
+  text-align: center;
+}
+
+.truncate{
+  white-space: nowrap; 
+  text-overflow:ellipsis; 
+  overflow: hidden; 
+  max-width:1px;
+}
+
+th{
+  text-align: center!important;
+}
+
+
+/* .page-link{
+  cursor: pointer;
+}
+
+.disabled > span{
+ cursor: not-allowed!important;
+}
+
+.active > span{
+  cursor: auto;
+ background-color: #007bFF;
+ color: #FFFFFF;
+
+.pagination{
+  justify-content: center;
+}
+} */
