--- a/app/views/devise/passwords/new.html.slim
+++ b/app/views/devise/passwords/new.html.slim
@@ -7,8 +7,8 @@ h2.mt-5.mb-3.text-center Forgot Your Password?
         = form.label :email, class: "required"
         = form.text_field :email, class: "form-control", placeholder: "Enter Email"
         - if resource.errors[:email].any?
-          .text-danger Email #{resource.errors[:email]}
+          .text-danger Email #{resource.errors[:email][0]}
       .text-center.my-3
         = form.submit "Reset Password", class: "btn btn-primary mr-2"
-        = link_to "Back", posts_path, class: "btn btn-dark ml-2"
+        = link_to "Back", new_user_session_path, class: "btn btn-dark ml-2"
   .col-md-4
