--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -5,23 +5,20 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ml-auto">
-      <% if user_signed_in? %>
       <li class="nav-item">
         <%= link_to "Posts", posts_path , class:"nav-link" %>
       </li>
+      <% if !user_signed_in? %>
+      <li class="nav-item">
+        <%= link_to "Login", new_user_session_path , class:"nav-link" %>
+      </li>
+      <% end %>
+      <% if user_signed_in? %>
       <li class="nav-item">
         <%= link_to "Edit", edit_user_registration_path , class:"nav-link" %>
       </li>
       <li class="nav-item">
         <%= link_to "Sign Out", destroy_user_session_path, method: :delete , class:"nav-link" %>
-      </li>
-      <% end %>
-      <% if !user_signed_in? %>
-      <li class="nav-item">
-        <%= link_to "Sign Up", new_user_registration_path , class:"nav-link" %>
-      </li>
-      <li class="nav-item">
-        <%= link_to "Log In", new_user_session_path , class:"nav-link" %>
       </li>
       <% end %>
     </ul>
