--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -1,28 +1,36 @@
-.w-50.mx-auto
+.w-100.mx-auto
   h1 Post List
   - if notice 
-    .text-success #{notice}
+    #div.text-success #{notice}
   = form_with model: @post, method: :GET do |form|
-  .row.my-3
-    .col-md-4
-      = link_to "Add New Post", new_post_path, class: "btn btn-primary" 
-    .col-md-5
-      = link_to "Generate Random Post", "create_random" , class: "btn btn-success" 
-  table.table.table-bordered
-    thread.thread-dark
+  -if user_signed_in?
+    .row.my-3.ml-0
+        = link_to "Add New Post", new_post_path, class: "btn btn-primary mr-2" 
+        = link_to "Generate Random Post", "create_random" , class: "btn btn-success" 
+  table.table.mb-3.table-bordered.stripe
+    thead.thread-dark
       tr.text-center
         th.no-sort No
         th.no-sort Title
         th.no-sort Description
+        th User
+        th.no-sort Status
         th Created At
-        th.no-sort Updated At
-        th.no-sort Action
+        -if user_signed_in?
+          th.no-sort Action
     tbody
       - @model.each.with_index do |post, index|
         tr
-          td.text-center == index+1
+          td.text-center
           td #{post.title}
-          td #{post.body}
-          td #{post.created_at.strftime("%Y-%m-%d")}
-          td #{post.updated_at.strftime("%Y-%m-%d")}
-          td.text-center = link_to "Detail", post_path(post.id), class: "btn btn-info"
+          td.truncate #{post.body}
+          td #{post.user.email}
+          td.text-center #{post.public_flag == 1 ? "<i class='fas fa-globe'></i>".html_safe : post.public_flag == 2 ? "<i class='fas fa-user'></i>".html_safe : "<i class='fas fa-lock'></i>".html_safe}
+          td #{post.created_at.strftime("%Y-%m-%d %H:%M:%S")}
+          -if user_signed_in?
+            td.text-center = link_to "Detail", post_path(post.id), class: "btn btn-info"
+  / .row.d-flex
+  /   .col-md-1
+  /   .col-md-10#pag
+  /     = will_paginate @model, previous_label: "<i class='fas fa-angle-double-left'></i>", next_label: "<i class='fas fa-angle-double-right'></i>",inner_window: 1, renderer: BootstrapPagination::Rails
+  /   .col-md-1
