--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -9,7 +9,13 @@
       <input class="form-control col-md-8" type="text" value="#{@model.title}" readonly>
     .form-group.row
       label.col-md-4.col-form-label Body
-      <input class="form-control col-md-8" type="text" value="#{@model.body}" readonly>
+      <textarea class="form-control col-md-8" readonly>#{@model.body}</textarea>
+    .form-group.row
+      label.col-md-4.col-form-label User
+      <input class="form-control col-md-8" type="text" value="#{@model.user.email}" readonly>
+    .form-group.row
+      label.col-md-4.col-form-label Status
+      <input class="form-control col-md-8" type="text" value="#{@model.public_flag == 1 ? 'Public' : @model.public_flag == 2 ? 'Users' : 'Private'}" readonly>
     .form-group.text-center
       = link_to "Edit Post", edit_post_path(@model), class: "btn btn-success mx-2"
       = link_to "Delete", post_path,
