--- a/app/views/users/passwords/new.html.slim
+++ b/app/views/users/passwords/new.html.slim
@@ -5,7 +5,7 @@ h2.mt-5.mb-3.text-center Forgot Your Password?
     = simple_form_for(resource, as: resource_name, url: password_path(resource_name), html: { method: :post }) do |form|
       .mt-2
         = form.label :email, class: "required"
-        = form.text_field :email, class: "form-control", placeholder: "Enter Email"
+        = form.email_field :email, class: "form-control", placeholder: "Enter Email"
         - if resource.errors[:email].any?
           .text-danger Email #{resource.errors[:email][0]}
       .text-center.my-3
