devise inevitable gem testing

--- a/app/views/welcome/index.html.slim
+++ b/app/views/welcome/index.html.slim
@@ -1,1 +1,5 @@
-h1.py-5.text-center Welcome From bulletin Board
+- flash.each do |type, msg|
+  #error[class="alert alert-#{type}"] #{msg}
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+        <span aria-hidden="true">&times;</span>
+h1.my-5.py-5.text-center Welcome From Bulletin Board
