--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -18,6 +18,9 @@
           <%= link_to "Edit", edit_user_registration_path , class:"nav-link" %>
         </li>
         <li class="nav-item">
+          <%= link_to "Invite", new_user_invitation_path , class:"nav-link" %>
+        </li>
+        <li class="nav-item">
           <%= link_to "Sign Out", destroy_user_session_path, method: :delete , class:"nav-link" %>
         </li>
       <% end %>
